proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  cluster: service
          access_log:
          - name: envoy.access_logers.file
            typed_config:
              '@type': type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: service
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: service2
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: service3
                port_value: 80
    health_checks:
    - interval: 10s
      timeout: 1s
      healthy_threshold: 3
      unhealthy_threshold: 5
      http_health_check:
        path: /status/200
    outlier_detection:
      consecutive_5xx: 5
      base_ejection_time: 30s
